succefuuly commited changes

--- a/onlineshopping/src/main/webapp/assets/css/shop-homepage.css
+++ b/onlineshopping/src/main/webapp/assets/css/shop-homepage.css
@@ -7,9 +7,34 @@
 body {
     padding-top: 54px;
 }
-
+html{
+	height:100%;
+}
 @media (min-width: 992px) {
     body {
         padding-top: 56px;
+        height:100%;
     }
+}
+
+
+/* Custom Styling */
+.wrapper{
+	min-height: 100%;
+	position: relative;
+}
+
+footer{
+	margin: 0;
+}
+
+.footer{
+	position: absolute;
+	bottom: 15px;
+	height: 60px;
+	width: 100%;
+}
+
+.content{
+	 	padding-bottom: 60px;
 }
